fix layout issues in chrome and safari - firefox still problematic.

--- a/src/theme/activity/all.scss
+++ b/src/theme/activity/all.scss
@@ -12,9 +12,11 @@
   }
   p {
     padding: 0 10%;
+    min-width: 200px;
   }
 }
-.activities {
+
+.activities-header {
   .grid {
     padding: 0px !important;
   }
@@ -42,10 +44,11 @@
       background-color: color($colors, secondary);
     }
     ion-col:first-child {
-      padding: 6% 0 3%;
+      padding: 0px;
     }
     ion-col:last-child {
-      padding: 3% 0 6%;
+      padding: 0px;
+      margin: 3% 0 3%;
     }
     ion-col {
       .score-inner-box {
@@ -73,7 +76,7 @@
       }
       .dashboard-logo {
         max-width: 80%;
-        height: 86px;
+        height: 130px;
       }
       .dashboard-data {
         max-width: 90%;
@@ -162,6 +165,14 @@
       }
     }
   }
+}
+
+.activities-content {
+   
+  .grid {
+    padding: 0px !important;
+  }
+
   .activity-list {
     margin-bottom: 0px;
 
